--- a/ComprasUSA/Base.lproj/Main.storyboard
+++ b/ComprasUSA/Base.lproj/Main.storyboard
@@ -21,9 +21,8 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="brasil" translatesAutoresizingMaskIntoConstraints="NO" id="9n5-qW-s8X">
                                 <rect key="frame" x="0.0" y="235.66666666666663" width="414" height="221"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Valor sem impostos (dólar 3,50)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LwY-Dw-T0B">
-                                <rect key="frame" x="76" y="378" width="260" height="18"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Valor sem impostos (dólar 3,50)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LwY-Dw-T0B">
+                                <rect key="frame" x="42.999999999999986" y="301" width="218.66666666666663" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <nil key="highlightedColor"/>
@@ -32,13 +31,6 @@
                                 <rect key="frame" x="43" y="65.333333333333329" width="218" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="R$ 0,00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oOH-Wu-pqV">
-                                <rect key="frame" x="75" y="466" width="160" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
-                                <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="US$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gne-P8-kYY">
@@ -56,6 +48,12 @@
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$ 0,00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oOH-Wu-pqV">
+                                <rect key="frame" x="40" y="327" width="352" height="38.333333333333314"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
+                                <color key="textColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -64,13 +62,18 @@
                             <constraint firstItem="OKf-ba-pEV" firstAttribute="trailing" secondItem="0J3-9e-HlR" secondAttribute="trailing" constant="-40" id="EFJ-sd-xtm"/>
                             <constraint firstItem="Gne-P8-kYY" firstAttribute="top" secondItem="2KP-og-ddQ" secondAttribute="bottom" constant="8" id="F8o-Re-Hpc"/>
                             <constraint firstItem="0J3-9e-HlR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HCd-Qg-PWg"/>
+                            <constraint firstItem="oOH-Wu-pqV" firstAttribute="trailing" secondItem="9n5-qW-s8X" secondAttribute="trailing" constant="-22" id="IRw-43-Z7r"/>
+                            <constraint firstItem="LwY-Dw-T0B" firstAttribute="leading" secondItem="oOH-Wu-pqV" secondAttribute="leading" constant="3" id="LHc-C9-5Ix"/>
+                            <constraint firstItem="oOH-Wu-pqV" firstAttribute="top" secondItem="LwY-Dw-T0B" secondAttribute="bottom" constant="8" id="SJ2-2E-CsS"/>
                             <constraint firstItem="OKf-ba-pEV" firstAttribute="centerY" secondItem="0J3-9e-HlR" secondAttribute="centerY" id="UZa-ZE-KOt"/>
                             <constraint firstItem="Gne-P8-kYY" firstAttribute="centerY" secondItem="OKf-ba-pEV" secondAttribute="centerY" id="aFI-vz-DpQ"/>
                             <constraint firstItem="0J3-9e-HlR" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.3" id="csi-zz-9Oh"/>
                             <constraint firstItem="OKf-ba-pEV" firstAttribute="leading" secondItem="Gne-P8-kYY" secondAttribute="trailing" constant="22" id="dE7-yx-SFH"/>
                             <constraint firstItem="9n5-qW-s8X" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hqW-aw-xT5"/>
                             <constraint firstItem="0J3-9e-HlR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="m4b-Te-d9x"/>
+                            <constraint firstItem="oOH-Wu-pqV" firstAttribute="leading" secondItem="9n5-qW-s8X" secondAttribute="leading" constant="40" id="o8N-Ig-ttj"/>
                             <constraint firstItem="2KP-og-ddQ" firstAttribute="leading" secondItem="Gne-P8-kYY" secondAttribute="leading" constant="3" id="qVU-jG-cN9"/>
+                            <constraint firstItem="oOH-Wu-pqV" firstAttribute="centerY" secondItem="9n5-qW-s8X" secondAttribute="centerY" id="uO1-Gg-7Uz"/>
                             <constraint firstItem="0J3-9e-HlR" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="wSs-2u-FLs"/>
                             <constraint firstItem="Gne-P8-kYY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="xeu-1I-yPE"/>
                             <constraint firstItem="9n5-qW-s8X" firstAttribute="height" secondItem="0J3-9e-HlR" secondAttribute="height" id="zcf-uz-37d"/>
