--- a/ComprasUSA/Base.lproj/Main.storyboard
+++ b/ComprasUSA/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="860.86956521739137" y="97.767857142857139"/>
+            <point key="canvasLocation" x="912" y="98"/>
         </scene>
         <!--Configurações-->
         <scene sceneID="fPl-49-nXb">
@@ -294,7 +294,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IXj-qq-cc9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2430.434782608696" y="96.428571428571431"/>
+            <point key="canvasLocation" x="2583" y="98"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="54f-hj-TCL">
