Aula 77 - Implementei métodos e cálculos na TaxesViewController e  ajustei um item no Storyboard, parte 6

--- a/ComprasUSA/Base.lproj/Main.storyboard
+++ b/ComprasUSA/Base.lproj/Main.storyboard
@@ -302,6 +302,9 @@
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H3k-u4-gyC">
                                         <rect key="frame" x="345" y="106" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="changeIOF:" destination="2X3-ZF-OfM" eventType="valueChanged" id="VCT-Wz-x23"/>
+                                        </connections>
                                     </switch>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total em R$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="12X-Db-mFt">
                                         <rect key="frame" x="20" y="163.5" width="99.5" height="20.5"/>
